style: fix subscribe button in dark mode

--- a/assets/css/subscribe-button.css
+++ b/assets/css/subscribe-button.css
@@ -3,6 +3,7 @@
   display: inline-flex;
   align-items: center;
   margin-left: 15px;
+  padding: 0px;
 }
 
 .footer-subscribe input[type="email"] {
@@ -19,7 +20,6 @@
   color: white;
   border: none;
   padding: 6px 12px;
-  border-radius: 0 4px 4px 0;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s;
